docs/tests/parser/expressions/invalid/ExprTernaryMissingColon.b
fn void test() {
    let int x = true ? 1;
}
